--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link type="text/css" href="./css/style.css" media="all" rel="stylesheet">
-    <title>SGRQ - St. George’s Respiratory Questionnaire application for COPD patients</title>
+    <title>SGRQ - St. George’s Respiratory Questionnaire Application</title>
     <meta property="og:title" content="SGRQ" />
-    <meta name="description" content="St. George’s Respiratory Questionnaire application for COPD patients." />
+    <meta name="description" content="St. George’s Respiratory Questionnaire Application." />
     <link rel="canonical" href="https://sgrq.github.io/" />
     <meta property="og:url" content="https://sgrq.github.io/" />
     <meta property="og:image" content="http://sgrq.github.io/img/sgrq-logo.png" />
-    <meta property="og:description" content="St. George’s Respiratory Questionnaire application for COPD patients." />
+    <meta property="og:description" content="St. George’s Respiratory Questionnaire Application." />
     <meta property="og:site_name" content="SGRQ" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="http://sgrq.github.io/img/sgrq-logo.png">
@@ -19,7 +19,7 @@
   <body>
     <header>
       <h1>SGRQ</h1>
-      <h2>St. George’s Respiratory Questionnaire application for COPD patients</h2>
+      <h2>St. George’s Respiratory Questionnaire Application</h2>
     </header>
     <main>
       <div class="center">
