--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </header>
     <main>
       <div class="center">
-        <h3>Download latest version:</h3>
+        <h3>Web version:</h3>
+        <a class="download" title="Web version" href="https://sgrq.netlify.app"><span class="icon">🧭</span><span>sgrq.netlify.app</span></a>
+        <h3>Desktop version:</h3>
         <a class="download" title="download Windows version" href="https://github.com/cphcrd/sgrq/releases/download/v1.1.0/SGRQ-win32-x64.zip"><i class="icon windows"></i><span>Windows</span></a>
         <a class="download" title="download Mac OS X version" href="https://github.com/cphcrd/sgrq/releases/download/v1.1.0/SGRQ-darwin-x64.zip"><i class="icon apple"></i><span>Mac OS X</span></a>
         <a class="download" title="download Linux version" href="https://github.com/cphcrd/sgrq/releases/download/v1.1.0/SGRQ-linux-x64.zip"><i class="icon linux"></i><span>Linux</span></a>
